--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -332,6 +332,13 @@
         <item>"/system/framework/arm64/boot-core-libart.vdex"</item>
     </string-array>
 
+    <!-- Number of physical SIM slots on the device. This includes both eSIM and pSIM slots, and
+     is not necessarily the same as the number of phones/logical modems supported by the device.
+     For example, a multi-sim device can have 2 phones/logical modems, but 3 physical slots,
+     or a single SIM device can have 1 phones/logical modems, but 2 physical slots (one eSIM
+     and one pSIM) -->
+    <integer name="config_num_physical_slots">2</integer>
+
     <!-- True if camera app should be pinned via Pinner Service -->
     <bool name="config_pinnerCameraApp">true</bool>
 
