sdm660-common: WifiOverlay: Disable WPA2 -> WPA3 upgrade.
Our device doesn't simply support sae.

Change-Id: Ibf8b9e363b4677cf2ab9590cc2ea1ba2341e29ca

--- a/rro_overlays/WifiOverlay/res/values/config.xml
+++ b/rro_overlays/WifiOverlay/res/values/config.xml
@@ -47,4 +47,7 @@
     <integer translatable="false" name="config_wifi_framework_wifi_score_entry_rssi_threshold_5GHz">-75</integer>
     <integer translatable="false" name="config_wifi_framework_wifi_score_low_rssi_threshold_5GHz">-75</integer>
 
+    <!-- Enable WPA2 to WPA3 auto-upgrade -->
+    <bool translatable="false" name="config_wifiSaeUpgradeEnabled">false</bool>
+
 </resources>
